--- a/default.css
+++ b/default.css
@@ -5,6 +5,9 @@
 	--mainText: black;
 	--secondaryText: #4b5156;
 	--themeDotBorder: #24292e;
+	--previewBg:rgb(251,249,243,0.8);
+	--previewShadow: #f0ead6;
+	--submitButton:black;
 }
 
 
@@ -130,6 +133,8 @@ h6{font-size: 16px;}
 
 .left-column{
 	grid-area: left-column;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 #profile-pic{
@@ -139,6 +144,11 @@ h6{font-size: 16px;}
 	width: 200px;
 	object-fit: cover;
 	border: 2px solid var(--borderColor);
+}
+
+#theme-options-wrapper{
+	display: flex;
+	justify-content: center;
 }
 
 .theme-dot{
@@ -154,12 +164,145 @@ h6{font-size: 16px;}
 	cursor: pointer;
 }
 
-.right-column{
-	grid-area: right-column;
+.theme-dot:hover{
+	border-width: 5px;
 }
 
-@media screen and (max-width: 1200px){
+#light-mode{
+	background-color: #fff;
+}
+
+#blue-mode{
+	background-color: #192734;
+}
+
+#green-mode{
+	background-color: #78866b;
+}
+
+#purple-mode{
+	background-color: #7E4C74;
+}
+
+#settings-note{
+	font-size: 12px;
+	font-style: italic;
+	text-align: center;
+}
+
+.right-column{
+	grid-area: right-column;
+	display: grid;
+	align-content: center;
+
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+#preview-shadow{
+	background-color: var(--previewShadow);
+	width: 300px;
+	height: 180px;
+	padding-left: 30px;
+	padding-top: 30px;
+}
+
+#preview{
+	width: 300px;
+	border: 1.5px solid #17a2b8;
+	background-color: var(--previewBg);
+	padding: 15px;
+	position: relative;
+}
+
+.corner{
+	width: 7px;
+	height: 7px;
+	border-radius: 50%;
+	border: 1.5px solid #17a2b8;
+	background-color: #fff;
+	position: absolute;
+}
+
+#corner-tl{
+	top: -5px;
+	left: -5px;
+}
+
+#corner-tr{
+	top: -5px;
+	right: -5px;
+}
+
+#corner-br{
+	bottom: -5px;
+	right: -5px;
+}
+
+#corner-bl{
+	bottom: -5px;
+	left: -5px;
+}
+
+#contact-form{
+	display: block;
+	max-width: 600px;
+	margin: 0 auto;
+	border: 1px solid var(--borderColor);
+	padding: 15px;
+	border-radius: 5px;
+	background-color: var(--mainColor);
+	margin-bottom: 50px;
+}
+
+#contact-form label{
+	line-height: 2.7em;
+}
+
+#contact-form textarea{
+	min-height: 100px;
+	font-size: 14px;
+}
+
+.input-field{
+	width: 100%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: var(--secondaryColor);
+	border-radius: 5px;
+	border: 1px solid var(--borderColor);
+	font-size: 14px;
+}
+
+#submit-btn{
+	margin-top: 10px;
+	width: 100%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	color: #fff;
+	background-color: var(--submitButton);
+	border: none;
+}
+
+@media screen and (max-width: 800px){
 	.main-container{
 		width: 95%;
 	}
+
+	.intro-wrapper{
+		grid-template-columns: 1fr;
+		grid-template-areas: 
+			'nav-wrapper'
+			'left-column'
+			'right-column'
+		;
+	}
+
+	.right-column{
+		justify-content: center;
+	}
+}
+
+.about-wrapper{
+	align-items: center;
 }
